--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
         <div class="business-card" id="card">
             <div class="card-side front">
                 <!-- Use the image as the front side -->
-                <div class="logo" style="background-image: src ('Depan.jpeg');"></div>
+                <div class="logo" style="background-image: src ('40ddeaec-60a4-4a31-a3f3-c94aeaf640bd.jpeg');"></div>
             </div>
             <div class="card-side back">
-                <div class="logo" style="background-image: src ('Depan.jpeg');"></div>
+                <div class="logo" style="background-image: src ('bb543cb4-eb98-4179-ae5b-33fb65be6d23.jpeg');"></div>
             </div>
         </div>
     </div>
