--- a/index.html
+++ b/index.html
@@ -18,16 +18,10 @@
       overflow: hidden;
     }
 
-    h1 {
-      color: #333;
-      margin-bottom: 20px;
-    }
-
     .card-container {
       width: 300px;
       height: 180px;
       perspective: 1000px;
-      margin-bottom: 20px;
     }
 
     .business-card {
@@ -48,22 +42,19 @@
       height: 100%;
       backface-visibility: hidden;
       border-radius: 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
       overflow: hidden;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
     }
 
     .front, .back {
-      background: white;
+      background: #fff;
     }
 
     .back {
       transform: rotateY(180deg);
     }
 
-    .logo {
+    .logo-img {
       width: 100%;
       height: 100%;
       object-fit: cover;
@@ -71,8 +62,6 @@
 
     .controls {
       margin-top: 20px;
-      display: flex;
-      gap: 10px;
     }
 
     button {
@@ -82,78 +71,36 @@
       background-color: #3498db;
       color: white;
       cursor: pointer;
-      transition: background-color 0.3s;
-    }
-
-    button:hover {
-      background-color: #2980b9;
-    }
-
-    .instructions {
-      margin-top: 20px;
-      font-size: 14px;
-      color: #555;
-      text-align: center;
-      max-width: 400px;
     }
   </style>
 </head>
 <body>
+
   <h1>Kad Perniagaan Interaktif</h1>
 
   <div class="card-container">
     <div class="business-card" id="card">
+      <!-- Depan Kad -->
       <div class="card-side front">
-        <img class="logo" src="40ddeaec-60a4-4a31-a3f3-c94aeaf640bd.jpeg" alt="Kad Depan"/>
+        <img src="40ddeaec-60a4-4a31-a3f3-c94aeaf640bd.jpeg" alt="Kad Depan" class="logo-img">
       </div>
+
+      <!-- Belakang Kad -->
       <div class="card-side back">
-        <img class="logo" src="bb543cb4-eb98-4179-ae5b-33fb65be6d23.jpeg" alt="Kad Belakang"/>
+        <img src="bb543cb4-eb98-4179-ae5b-33fb65be6d23.jpeg" alt="Kad Belakang" class="logo-img">
       </div>
     </div>
   </div>
 
   <div class="controls">
-    <button id="flip-card">Terbalikkan Kad</button>
-  </div>
-
-  <div class="instructions">
-    <p>Seret kad dengan tetikus untuk putaran manual.</p>
+    <button onclick="flipCard()">Terbalikkan Kad</button>
   </div>
 
   <script>
-    const card = document.getElementById('card');
-    const flipCardBtn = document.getElementById('flip-card');
-
-    flipCardBtn.addEventListener('click', () => {
-      card.classList.toggle('flipped');
-    });
-
-    // Manual rotate
-    let isDragging = false;
-    let previousX, previousY;
-    let rotationX = 0, rotationY = 0;
-
-    card.addEventListener('mousedown', (e) => {
-      isDragging = true;
-      previousX = e.clientX;
-      previousY = e.clientY;
-    });
-
-    document.addEventListener('mousemove', (e) => {
-      if (isDragging) {
-        const deltaX = e.clientX - previousX;
-        const deltaY = e.clientY - previousY;
-        rotationY += deltaX * 0.5;
-        rotationX -= deltaY * 0.5;
-        card.style.transform = `rotateX(${rotationX}deg) rotateY(${rotationY}deg)`;
-        previousX = e.clientX;
-        previousY = e.clientY;
-      }
-    });
-
-    document.addEventListener('mouseup', () => {
-      isDragging = false;
-    });
+    function flipCard() {
+      document.getElementById('card').classList.toggle('flipped');
+    }
   </script>
+
 </body>
 </html>
