--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ export default function PersistentImageCard() {
             {frontImage ? (
               <div className="w-full h-full relative">
                 <img 
-                  src={frontImage} 
+                  src={gambardepan.jpeg} 
                   alt="Gambar Depan" 
                   className="absolute w-full h-full object-cover"
                 />
@@ -241,7 +241,7 @@ export default function PersistentImageCard() {
             {backImage ? (
               <div className="w-full h-full relative">
                 <img 
-                  src={backImage} 
+                  src={gambarbelakang.jpeg} 
                   alt="Gambar Belakang" 
                   className="absolute w-full h-full object-cover"
                 />
