--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kartu 360 Derajat</title>
+  <title>TELEKUNG MARYAM</title>
   <style>
     * {
       margin: 0;
@@ -165,8 +165,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Kartu 360 Derajat</h1>
-    <p>Geser untuk memutar kartu</p>
+    <h1>CARD TELEKUNG MARYAM</h1>
+    <p></p>
     
     <div class="card-container">
       <div class="card" id="card">
