--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <div class="status">
         Anda sedang melihat sisi: <span class="bold" id="currentSide">DEPAN</span>
       </div>
-      <button class="flip-btn" id="flipBtn">Balik Kartu</button>
+      <button class="flip-btn" id="flipBtn">CLICK HERE</button>
     </div>
     
     <p class="info">
